python/10-phpmyadmin-service.yaml
# service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: python-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: phpmyadmin
